shorten repo url

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>iliasku/mikro helm charts Repo</h1>
     <p>point helm at this repo to see charts:</p>
-    <p>helm repo add helm-mikro https://iliasku.github.io/mikro/charts</p>
+    <p>helm repo add helm-mikro https://iliasku.github.io/mikro</p>
   </body>
 </html>
