--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>mikro helm chart repo</title>
   </head>
   <body>
-    <h1>iliasku/mikro helm charts Repo</h1>
+    <h1>iliasku/mikro helm charts repo</h1>
     <p>point helm at this repo to see charts:</p>
     <p>helm repo add helm-mikro https://iliasku.github.io/mikro</p>
   </body>
